--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
-    <h1 class="header">SITHS Movie Database</h1>
-    <h2 class="top-rated">Our Top Rated Movies</h2>
+    <h1 class="header">Food Database</h1>
+    <h2 class="top-rated">Types of Food</h2>
     <section class="movie-grid">
       <!--  <div class="movie-card">
         <div class="movie-card-front">
