--- a/src/index.html
+++ b/src/index.html
@@ -4,42 +4,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link
-      href="https://fonts.googleapis.com/css2?family=Asap:wght@400;600&family=Josefin+Slab:ital,wght@0,300;0,400;1,300&display=swap"
+      href=""
       rel="stylesheet"
     />
     <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
     <h1 class="header">Food Database</h1>
-    <h2 class="top-rated">Types of Food</h2>
-    <section class="movie-grid">
-      <!--  <div class="movie-card">
-        <div class="movie-card-front">
-          <img
-            src="https://image.tmdb.org/t/p/w300/r7vmZjiyZw9rpJMQJdXpjgiCOk9.jpg"
-            alt=""
-            class="poster"
-          />
+    <h2 class="food-type">Types of Food</h2>
+    <section class="recipe-grid">
+      <div class="recipe-card">
+        <div class="recipe-card-front">
         </div>
-        <div class="movie-card-back">
-          <h3 class="movie-card-header">The Dark Knight</h3>
+        <di class="recipe-card-back">
+          <h3 class="recipe-card-header">Pasta</h3>
           <div class="score-box">
-            <p class="user-score">Community Score</p>
-            <p class="user-score">8.4</p>
+            <p class="health-score">Health Score</p>
+            <p class="health-score">21</p>
           </div>
 
-          <div class="release-box">
-            <p class="release-date">Released</p>
-            <p class="release-date">2020-06-12</p>
-          </div>
-
-          <div class="movie-genres">
-            <li class="movie-genre">Sci-Fi</li>
-            <li class="movie-genre">Fantasy</li>
-            <li class="movie-genre">Horror</li>
+          <div class="food-box">
+            <p class="food-form">Consistency</p>
+            <p class="food-form">Solid</p>
           </div>
         </div>
-      </div> -->
+      </div> 
     </section>
 
     <script src="js/index.js"></script>
