--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="scss/style.scss" />
   </head>
   <body>
-    <h1 class="header">Food Database</h1>
-    <h2 class="food-type">Types of Food</h2>
+    <h1 class="header">Recipe Database</h1>
+    <h2 class="food-type">Types of Recipes</h2>
     <section class="recipe-grid">
       <div class="recipe-card">
         <div class="recipe-card-front">
@@ -24,8 +24,8 @@
           </div>
 
           <div class="food-box">
-            <p class="food-form">Consistency</p>
-            <p class="food-form">Solid</p>
+            <p class="spoon-score">Spoonacular Score</p>
+            <p class="spoon-score">47</p>
           </div>
         </div>
       </div> 
