--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <div class="recipe-card">
         <div class="recipe-card-front">
         </div>
-        <di class="recipe-card-back">
+        <div class="recipe-card-back">
           <h3 class="recipe-card-header">Pasta</h3>
           <div class="score-box">
             <p class="health-score">Health Score</p>
