why won't it show up

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
           <h3 class="recipe-card-header">Pasta</h3>
           <div class="score-box">
             <p class="health-score">Diary Free</p>
-            <p class="health-score">fales</p>
+            <p class="health-score">false</p>
           </div>
 
           <div class="food-box">
