plz do something

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="recipe-card-back">
           <h3 class="recipe-card-header">Pasta</h3>
-          <div class="type-box">
+          <div class="score-box">
             <p class="dairy-free">Diary Free</p>
             <p class="dairy-free">false</p>
           </div>
