--- a/src/index.html
+++ b/src/index.html
@@ -18,14 +18,14 @@
         </div>
         <div class="recipe-card-back">
           <h3 class="recipe-card-header">Pasta</h3>
-          <div class="type-box">
-            <p class="dairy-free">Diary Free</p>
-            <p class="dairy-free">false</p>
+          <div class="score-box">
+            <p class="health-score">Diary Free</p>
+            <p class="health-score">false</p>
           </div>
 
           <div class="food-box">
-            <p class="gulten-free">Gluten Free</p>
-            <p class="gulten-free">true</p>
+            <p class="spoon-score">Gluten Free</p>
+            <p class="spoon-score">true</p>
           </div>
         </div>
       </div> 
