--- a/src/index.html
+++ b/src/index.html
@@ -19,13 +19,13 @@
         <div class="recipe-card-back">
           <h3 class="recipe-card-header">Pasta</h3>
           <div class="score-box">
-            <p class="health-score">Diary Free</p>
-            <p class="health-score">fales</p>
+            <p class="health-score">Health Score</p>
+            <p class="health-score">21</p>
           </div>
 
           <div class="food-box">
-            <p class="spoon-score">Gluten Free</p>
-            <p class="spoon-score">true</p>
+            <p class="spoon-score">Spoonacular Score</p>
+            <p class="spoon-score">47</p>
           </div>
         </div>
       </div> 
