--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
         <div class="recipe-card-back">
           <h3 class="recipe-card-header">Pasta</h3>
           <div class="score-box">
-            <p class="health-score">Health Score</p>
+            <p class="health-score">Community Score</p>
             <p class="health-score">21</p>
           </div>
 
